tests/ui/ferrocene/compiler-arguments/edition/edition_2015-without-extern-crate.stderr
error[E0433]: failed to resolve: you might be missing crate `some_crate`
  --> $DIR/edition_2015-without-extern-crate.rs:6:7
   |
LL |     ::some_crate::hello();
   |       ^^^^^^^^^^ you might be missing crate `some_crate`
   |
help: consider importing the `some_crate` crate
   |
LL + extern crate some_crate;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
