tests/ui/ferrocene/compiler-arguments/edition/edition_2015-without-extern-crate.rs
//@ check-fail
//@ aux-build:some_crate.rs
//@ compile-flags:--extern some_crate --edition 2015

fn main() {
    ::some_crate::hello(); //~ ERROR [E0433]
}

// ferrocene-annotations: um_rustc_edition
